Task1/vnet.tf
resource "azurerm_virtual_network" "main" {
  name          = "capstone-vnet"
  address_space = ["10.1.0.0/16"]

  location            = azurerm_resource_group.main.location
  resource_group_name = azurerm_resource_group.main.name
}

resource "azurerm_subnet" "subnet1" {
  name = "app-subnet"

  resource_group_name = azurerm_resource_group.main.name

  virtual_network_name = azurerm_virtual_network.main.name

  address_prefixes = ["10.1.1.0/24"]
}

resource "azurerm_subnet" "subnet2" {
  name = "tools-subnet"

  resource_group_name = azurerm_resource_group.main.name

  virtual_network_name = azurerm_virtual_network.main.name

  address_prefixes = ["10.1.2.0/24"]
}
