Task1/nsg.tf
resource "azurerm_network_security_group" "main" {

  name = "capstone-nsg"

  location = azurerm_resource_group.main.location

  resource_group_name = azurerm_resource_group.main.name
}

# -----------SSH RULE----------------


resource "azurerm_network_security_rule" "ssh" {

  name = "Allow-SSH"

  priority = 100

  direction = "Inbound"

  access = "Allow"

  protocol = "Tcp"

  source_port_range = "*"

  destination_port_range = "22"

  source_address_prefix = "*"

  destination_address_prefix = "*"

  resource_group_name = azurerm_resource_group.main.name

  network_security_group_name = azurerm_network_security_group.main.name
}

# ---------------HTTP RULE----------


resource "azurerm_network_security_rule" "http" {

  name = "Allow-HTTP"

  priority = 110

  direction = "Inbound"

  access = "Allow"

  protocol = "Tcp"

  source_port_range = "*"

  destination_port_range = "80"

  source_address_prefix = "*"

  destination_address_prefix = "*"

  resource_group_name = azurerm_resource_group.main.name

  network_security_group_name = azurerm_network_security_group.main.name
}



# ------------Jenkins--------

resource "azurerm_network_security_rule" "jenkins" {

  name      = "Allow-Jenkins"
  priority  = 120
  direction = "Inbound"
  access    = "Allow"
  protocol  = "Tcp"

  source_port_range      = "*"
  destination_port_range = "8080"

  source_address_prefix      = "*"
  destination_address_prefix = "*"

  resource_group_name = azurerm_resource_group.main.name

  network_security_group_name = azurerm_network_security_group.main.name
}
